--- a/jupyter_tips_and_tricks.ipynb
+++ b/jupyter_tips_and_tricks.ipynb
@@ -43,7 +43,7 @@
    "source": [
     "# Jupyter vs Colab\n",
     "\n",
-    "Colab is Google's version of Jupyter. While Jupyter is older and more widely used (for now), in Colab has some significant advantages (and personally I like it better than Jupyter):\n",
+    "Colab is Google's version of Jupyter. While Jupyter is older and more widely used (for now), Colab has some significant advantages (and personally I like it better than Jupyter):\n",
     "* Colab is supported by Google drive, which gives it a bunch of advantages:\n",
     "    * It lives in the cloud and is well backed up\n",
     "    * You have version checkpoints\n",
@@ -70,7 +70,7 @@
    "source": [
     "# Notebook extensions\n",
     "\n",
-    "Basic jupyter notebooks are pretty bare-bones and lack a lot of the featres of most Python editors. However, there is a repository of extensions that help smooth the shard edges a little. There is a library of unofficial but widely used extensions that can installed with these two commands:\n",
+    "Basic jupyter notebooks are pretty bare-bones and lack a lot of the featres of most Python editors. However, there is a repository of extensions that help smooth the sharp edges a little. There is a library of unofficial but widely used extensions that can installed with these two commands:\n",
     "```\n",
     "pip install jupyter_contrib_nbextensions\n",
     "jupyter contrib nbextension install --user\n",
@@ -96,7 +96,7 @@
    "source": [
     "# Latex\n",
     "\n",
-    "Jupyter notebooks render Latex!  For example:\n",
+    "Jupyter notebooks render Latex in markdown mode!  For example:\n",
     "\n",
     "\\begin{align}\n",
     "\\dot{x} & = \\sigma(y-x) \\\\\n",
@@ -111,18 +111,18 @@
    "source": [
     "# Widgets\n",
     "\n",
-    "Widgets are useful for interactively modifying parameters. They are pretty and save time."
+    "Widgets are useful for interactively modifying parameters. They look pretty and save time."
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 468,
+   "execution_count": 485,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "application/vnd.jupyter.widget-view+json": {
-       "model_id": "dd1cd606bd234a0c818aaa85d7d957bd",
+       "model_id": "c9f6b47c648e4dc5b5814d3f4baa1ebb",
        "version_major": 2,
        "version_minor": 0
       },
@@ -139,14 +139,14 @@
        "<function __main__.int_f(x)>"
       ]
      },
-     "execution_count": 468,
+     "execution_count": 485,
      "metadata": {},
      "output_type": "execute_result"
     },
     {
      "data": {
       "application/vnd.jupyter.widget-view+json": {
-       "model_id": "3b7a129b47a14c44adedc293413ed462",
+       "model_id": "7a855348e4184e87b694e091094c456c",
        "version_major": 2,
        "version_minor": 0
       },
@@ -163,14 +163,14 @@
        "<function __main__.float_f(x)>"
       ]
      },
-     "execution_count": 468,
+     "execution_count": 485,
      "metadata": {},
      "output_type": "execute_result"
     },
     {
      "data": {
       "application/vnd.jupyter.widget-view+json": {
-       "model_id": "59843ddbab3840e891fdf46cdf942c1e",
+       "model_id": "711194824e3c4a36a9908874ca92aab6",
        "version_major": 2,
        "version_minor": 0
       },
@@ -187,14 +187,14 @@
        "<function __main__.bool_f(x)>"
       ]
      },
-     "execution_count": 468,
+     "execution_count": 485,
      "metadata": {},
      "output_type": "execute_result"
     },
     {
      "data": {
       "application/vnd.jupyter.widget-view+json": {
-       "model_id": "00c92df3a451458dbf4a590ff5d7908f",
+       "model_id": "36ac1c54cac74bdabca145291b5481e7",
        "version_major": 2,
        "version_minor": 0
       },
@@ -211,14 +211,14 @@
        "<function __main__.str_f(x)>"
       ]
      },
-     "execution_count": 468,
+     "execution_count": 485,
      "metadata": {},
      "output_type": "execute_result"
     },
     {
      "data": {
       "application/vnd.jupyter.widget-view+json": {
-       "model_id": "ce03393fe2bc4dbb90b3297c2029b0aa",
+       "model_id": "2c3c2ce93ffa4347b83f883e54178e43",
        "version_major": 2,
        "version_minor": 0
       },
@@ -235,7 +235,7 @@
        "<function __main__.str_f(x)>"
       ]
      },
-     "execution_count": 468,
+     "execution_count": 485,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -327,29 +327,9 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 470,
+   "execution_count": 488,
    "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "8"
-      ]
-     },
-     "execution_count": 470,
-     "metadata": {},
-     "output_type": "execute_result"
-    },
-    {
-     "data": {
-      "text/plain": [
-       "<Figure size 432x288 with 0 Axes>"
-      ]
-     },
-     "metadata": {},
-     "output_type": "display_data"
-    }
-   ],
+   "outputs": [],
    "source": [
     "##############################################################################\n",
     "# %run:  Running python files and other notebooks\n",
@@ -361,7 +341,7 @@
     "# code reuse.\n",
     "\n",
     "%run python_file.py  # Contains def multiply_by_2()...\n",
-    "multiply_by_2(4)"
+    "multiply_by_2(4);  # Now we can call multiply_by_2()"
    ]
   },
   {
@@ -385,7 +365,7 @@
    "source": [
     "# Keyboard Shortcuts\n",
     "\n",
-    "Jupyter has a lot of keyboard shortcuts, and using them can improve efficiency a lot. Below is a full list (which can be viewed in a pop-up by pressing 'H' in command mode). I've put red asterisks (<span style=\"color:red\">***</span>) next to the ones I use regularly.\n",
+    "Jupyter has a lot of keyboard shortcuts, and using them can improve efficiency a lot. Below is a full list (which can be viewed in a pop-up by pressing 'H' in command mode). I've put red asterisks (<span style=\"color:red\">***</span>) next to the ones I use most frequently.\n",
     "\n",
     "Mac OS X modifier keys:\n",
     "* ⌘: Command\n",
@@ -506,7 +486,7 @@
     "x\n",
     "y\n",
     "```\n",
-    "will only print `2` in its output, and will not print the output `1` coming from the `x` statement. In this example, to print `x` you would need to explicitly call a print statement `print(x)`.\n",
+    "will only print `2` (coming from the last line, the `y` statement) in its output, and will not print the output `1` coming from the `x` statement. In this example, to print `x` you would need to explicitly call a print statement `print(x)`.\n",
     "\n",
     "However, you can change this behavior to print all outputs by running these lines:\n",
     "```\n",
@@ -523,7 +503,7 @@
    "source": [
     "# Dataframes\n",
     "\n",
-    "Dataframes are a very commonly used data structure, consisting of labeled rows and columns of data. There are dataframe libraries in all common programming languages, but the most widely used library for dataframes in python is pandas. Pandas plays well with numpy, csv, dictionaries, and other data structures. But the dataframe structure is definitely the easiest to use for efficiently analyzing/manipulating data.\n",
+    "Dataframes are a very commonly used data structure, consisting of labeled rows and columns of data. There are dataframe libraries in all common programming languages. The most widely used library for dataframes in python is pandas. Pandas plays well with numpy, csv, dictionaries, and other data structures. But the dataframe structure is often the easiest to use for efficiently analyzing/manipulating data.\n",
     "\n",
     "Pandas dataframes are very widely used in industry, and they make life so much easier than doing your analysis in core python/numpy. There are lots of good tutorials/resources online, so I won't give lots of examples (but see the plotting section below for some dataframe usage). However, here are some key pandas functions to know:\n",
     "* [sort_values()](https://pandas.pydata.org/pandas-docs/stable/reference/api/pandas.DataFrame.sort_values.html)\n",
@@ -540,9 +520,9 @@
    "source": [
     "# Plotting:  Matplotlib vs Seaborn vs Plotly\n",
     "\n",
-    "Matplotlib, Seaborn, and Plotly are the three plotting libraries I've used (and three of the most common python plotting libraries). But disclaimer: I'm not super experienced at plotting so take everything with a grain of salt. Here are my opinions:\n",
+    "Matplotlib, Seaborn, and Plotly are the three plotting libraries I've used (and three of the most common python plotting libraries). Here are my opinions about them:\n",
     "* Matplotlib is the most basic and customizable --- with enough code you can do anything in matplotlib. The drawback is that it often takes a lot of code, even for relatively simple plots. I rarely use matplotlib unless I need to heavily customize a plot.\n",
-    "* Seaborn is much easier to use than matplotlib. It uses matplotlib as a back-end (so your matplotlib knowledge transfers), but allows you to make nice-looking plots with sensible features in faw fewer lines of code. Seaborn also plays very nicely with dataframes. Seaborn is my go-to plotting library and with a bit of practice it's very efficient to use. See this link for an introduction to seaborn: https://seaborn.pydata.org/introduction.html\n",
+    "* Seaborn is much easier to use than matplotlib. It uses matplotlib as a back-end (so your matplotlib knowledge transfers), but allows you to make nice-looking plots with sensible features in far fewer lines of code. Seaborn also plays very nicely with dataframes. Seaborn is my go-to plotting library and with a bit of practice it's very efficient to use. See this link for an introduction to seaborn: https://seaborn.pydata.org/introduction.html\n",
     "* Plotly. I've only recently started using plotly, but it has some really great features and I like it a lot! Like seaborn it is intuitive, easy to use without writing many lines of code, and not as customizable as matplotlib. However, unlike seaborn it doesn't use matplotlib as a backend, so takes a little longer to get used to. However, its plots are interactive, with pop-up data boxes when you hover over a plot, the ability to turn on/off subplots with a click, etc. I highly recommend giving it a try. Here are some introductory links:\n",
     "    * Official plotly documentation: https://plotly.com/python/\n",
     "    * Official plotly express documentation: https://plotly.com/python/plotly-express/\n",
@@ -665,7 +645,7 @@
     "# Everything is a one-liner!\n",
     "sns.lineplot('x', 'y', hue='y_name', data=melted_data, ax=ax_plot);\n",
     "sns.scatterplot('x', 'y', hue='y_name', data=melted_data, ax=ax_scatter);\n",
-    "sns.barplot('y_name', 'y', data=melted_data);"
+    "sns.barplot('y_name', 'y', data=melted_data);  # Gives us automatic errorbars!"
    ]
   },
   {
@@ -4047,7 +4027,7 @@
     "px.line(melted_data, x='x', y='y', color='y_name', title='line plot')\n",
     "px.scatter(melted_data, x='x', y='y', color='y_name', title='scatter plot',\n",
     "           marginal_y='box', marginal_x='violin')\n",
-    "px.bar(data.mean()[1:], title='bar plot')\n",
+    "px.bar(data.mean()[1:], title='bar plot')  # Like matplotlib, no errorbars\n",
     "\n",
     "# Note we can click the lines on and off and view values when we hover the\n",
     "# cursor"
@@ -4060,7 +4040,7 @@
     "## Line Plots with ErrorBars\n",
     "\n",
     "TLDR:\n",
-    "* Seaborn handles errorbars/distributions automatically (as we saw in the bar plot above). In this sense it's head an shoulders above matplotlib and pyplot."
+    "* Seaborn handles errorbars/distributions automatically (as we saw in the bar plot above). In this sense it's much better than matplotlib and pyplot."
    ]
   },
   {
@@ -5321,7 +5301,7 @@
     "## Violin plots\n",
     "\n",
     "TLDR:\n",
-    "* Again seaborn and plotly are so much easier to use than matplotlib."
+    "* Seaborn and plotly are so much easier to use than matplotlib."
    ]
   },
   {
@@ -6525,7 +6505,7 @@
    "source": [
     "## Subplots with Plotly\n",
     "\n",
-    "By the way, plotly is good at making grids of plots from dataframes. Below are a couple examples:"
+    "While plotly express doesn't have matplotlib/seaborn-style subplots, you can make subplots using plotly's graph objects library (which takes a little more code than plotly express but isn't too painful). However, plotly express can make grids of plots from dataframes. Below are a couple examples:"
    ]
   },
   {
